Move Popups into Panzoom so that they overflow correctly.

--- a/css/host-helper.css
+++ b/css/host-helper.css
@@ -36,6 +36,16 @@ h3 {
   height:30px;
 }
 
+#seatPopUp {
+	/* The floorplan has z-index 1, we want it to display over the floorplan. */
+	z-index: 2;
+}
+
+#unseatPopUp {
+	/* The floorplan has z-index 1, we want it to display over the floorplan. */
+	z-index: 2;
+}
+
 /* Floorplan */
 /* Used http://www.cssarrowplease.com/ */
 .floorplan-tooltip {
